@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-10-17 Thu 15:44 -->
+<!-- 2024-10-17 Thu 16:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2024-10-17 15:44:24</i></td>
+<td class="org-left"><i>2024-10-17 16:20:43</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2024-10-17 15:44:27</i></td>
+<td class="org-left"><i>2024-10-17 16:20:45</i></td>
 </tr>
 </tbody>
 </table>
@@ -307,6 +307,7 @@ Copyright &copy; 2024 Mitch Richling. All rights reserved.
 <ul class="org-ul">
 <li>New
 <ul class="org-ul">
+<li>newton_min_angle_starfish: Min angle newton with poles.</li>
 <li>LevyCurve: Levy Curve via chaos game</li>
 <li>phoenix: Classic phoenix fractal (escape time)</li>
 <li>phoenixD: Classic phoenix fractal (distance estimator outside)</li>
